# tembo

./: .env.sample  .gitignore  CHANGELOG.md  CODEOWNERS  Cargo.toml  Dockerfile  LICENSE  README.md  conductor-0.3.0.tgz  conductor-0.3.1.tgz  conductor-0.3.2.tgz  conductor-0.4.0.tgz  conductor-0.5.0.tgz  conductor-0.5.1.tgz  conductor-0.5.2.tgz  conductor-0.6.0.tgz  conductor-0.7.0.tgz  conductor-0.7.1.tgz  ct.yaml  dev-suite.md  index.yaml  justfile  mkdocs.yml  pyproject.toml  tembo-24.2.0.tgz  tembo-24.3.0.tgz  tembo-24.3.1.tgz  tembo-24.3.2.tgz  tembo-24.3.3.tgz  tembo-25.3.0.tgz  tembo-25.3.1.tgz  tembo-25.3.3.tgz  tembo-25.3.4.tgz  tembo-25.3.5.tgz  tembo-25.3.6.tgz  tembo-25.3.7.tgz  tembo-operator-0.10.0.tgz  tembo-operator-0.11.0.tgz  tembo-operator-0.2.0.tgz  tembo-operator-0.2.1.tgz  (+25 more)
conductor/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.console  Makefile  README.md  build.rs  justfile  metrics.yml  pre-build-hook.sh  sqlx-data.json
conductor/.sqlx/: query-0d0aceb02d6bec4daa1e3b7f7a8636ccbbeaa012fcce04d392268c4968e75a9e.json  query-f2556876a34f6128668dc9f5987c200acbf7974cc7f7c3c927d8031f828b8783.json
conductor/migrations/: 20240321181458_create_deleted_instances.down.sql  20240321181458_create_deleted_instances_table.up.sql
conductor/scripts/: reset-local-test-cluster.sh
conductor/src/: aws.rs  cloud.rs  coredb_crd.rs  errors.rs  extensions.rs  heartbeat_monitor.rs  lib.rs  main.rs  metrics.rs  metrics_reporter.rs  monitoring.rs  status_reporter.rs  types.rs
conductor/testdata/: operator-values.yaml  traefik-values.yaml
conductor/tests/: integration_tests.rs  operator-values.yaml  traefik-values.yaml
coredb-cli/: Cargo.toml  README.md
coredb-cli/src/: main.rs
coredb-cli/tests/: integration_tests.rs
coredb-operator/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  Tiltfile  justfile  rustfmt.toml  test-db-params.yaml  test-db.yaml
coredb-operator/docs/: debug-operator-vscode.md
coredb-operator/scripts/: kube-prometheus-stack-values.yaml  reset-local-test-cluster.sh
coredb-operator/src/: config.rs  configmap.rs  controller.rs  controller_util.rs  crdgen.rs  cronjob.rs  defaults.rs  deployment_postgres_exporter.rs  errors.rs  exec.rs  extensions.rs  fixtures.rs  ingress.rs  ingress_route_tcp_crd.rs  lib.rs  main.rs  metrics.rs  postgres_exporter.rs  postgres_exporter_role.rs  psql.rs  rbac.rs  secret.rs  service.rs  servicemonitor.rs  servicemonitor_crd.rs  servicemonitors.rs  statefulset.rs  telemetry.rs
coredb-operator/testdata/: cert-manager.yaml  cnpg.yaml  kind-1.24.yaml  kind-1.25.yaml  kind-config.yaml  prometheus-stack.yaml  traefik-values.yaml
coredb-operator/tests/: README.md  integration_tests.rs
coredb-operator/yaml/: crd.yaml  deployment.yaml  install.yaml  sample-coredb.yaml
cp-client/: Cargo.toml  README.md
cp-client/docs/: AppApi.md  AppConfig.md  AppService.md  AppTypeOneOf.md  AppTypeOneOf1.md  AppTypeOneOf4.md  ConnectionPooler.md  Cpu.md  CreateInstance.md  EnvVar.md  EnvVarRef.md  Environment.md  ErrorResponseSchema.md  ExtensionInstallLocation.md  ExtensionInstallLocationStatus.md  ExtensionStatus.md  HeaderConfig.md  Infrastructure.md  Ingress.md  IngressType.md  Instance.md  InstanceApi.md  InstanceEvent.md  IntOrStringOneOf1.md  Middleware.md  MiddlewareOneOf.md  MiddlewareOneOf1.md  MiddlewareOneOf2.md  PgBouncer.md  PoolerPgbouncerPoolMode.md  Probe.md  Probes.md  ReplacePathRegexConfig.md  ReplacePathRegexConfigType.md  Resource.md  ResourceRequirements.md  Restore.md  RestoreInstance.md  Routing.md  State.md  (+4 more)
crates/pgmq/: Cargo.toml  Makefile  README.md
dataplane-webserver/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
dataplane-webserver/scripts/: update-coredb-quay.sh
dataplane-webserver/src/: config.rs  lib.rs  main.rs  routes.rs
dataplane-webserver/tests/: integration_test.rs
examples/image-search/: Dockerfile  README.md  demo.ipynb  docker-compose.yml  pyproject.toml
extensions/pgmq/: Cargo.toml  README.md  pgmq.control  pgx_pgmq.control
extensions/pgx_prometheus_exporter/: Cargo.toml  README.md  pgx_prometheus_exporter.control
extensions/prometheus_exporter/: Cargo.toml  README.md  prometheus_exporter.control
inference-gateway/: Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
inference-gateway/.sqlx/: query-16e4a8024f80fd49f88246b8f18312b46d3541362f11a2f51193f5233c19e022.json  query-19dfb5233dddcc014bcc597b1e1ef1e43a453a5968008de3dc841412108aa2b7.json  query-1f8a5ca60e5db410badb65831865d861c0a5dff7f7523874d79b883bec5fc208.json  query-60ab455e55f080afce0d00fc574f7c3b5ae73a6bfe4867af94060283d886c934.json  query-6f665448b46642d95ae519fc0ca7f991767d0aa339aa0dc5ecc09a2299e41ed1.json  query-a2dbe8ada1c4213490f83bd7b23b8737f4fe288a063571044afb745e889b2242.json  query-be21197914e8a3778e818a1fca0080e9e700ba084f945fe20fda7b28e5a8f6af.json  query-d40a57b4def73e3fc17250997db4c2012f69a692fa5c2b9f54032fb7f92c25c4.json  query-df67631f0d3aa941507bfd05a2abd81a8c88022893c813d0255723a3d761a3ce.json
inference-gateway/docker/: Dockerfile.postgres
inference-gateway/migrations/: 20240516140306_init.sql  20240531145654_timestamps_extension.sql  (+9 more)
nile-client-rs/: .env_example  Cargo.toml  README.md
pg_later/: Cargo.toml  Makefile  Trunk.toml  pg_later.control
postgres/: .gitignore  Cargo.toml  Dockerfile  README.md  install-extensions.sh  postgresql.conf  pre-build-hook.sh
reconciler/: Cargo.toml  Dockerfile  Makefile  README.md
tembo-cli/: .gitignore  Cargo.toml  CommandLineHelp.md  README.md  command-reference.md  rustfmt.toml
tembo-inference/: Cargo.toml  README.md  docker-compose.yml
tembo-operator/: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  justfile  posthog-compose.yml  test-db-extensions.yaml  test-db-params.yaml  test-db.yaml  test-pod.yaml
tembo-pod-init/: .gitignore  .renovaterc.json  Cargo.toml  Dockerfile  README.md  justfile  pre-build-hook.sh
tembo-py/: .gitignore  .tool-versions  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
tembo-stacks/: .gitignore  Cargo.toml  README.md
(+1159 files in other folders)
