[package]
name = "tembo-cli"
version = "0.2.3"
edition = "2021"
authors = ["Tembo.io"]
description = "The CLI for Tembo"
homepage = "https://www.tembo.io"
license = "MIT"
readme = "README.md"
repository = "https://github.com/tembo-io/tembo-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
serde_json = "1.0.91"
serde_yaml = "0.9.17"

[dev-dependencies]
assert_cmd = "2.0.8"
predicates = "2.1.5"
