[package]
name = "tembo"
version = "0.6.0"
edition = "2021"
authors = ["Tembo.io"]
description = "The CLI for Tembo"
homepage = "https://www.tembo.io"
license = "MIT"
readme = "README.md"
repository = "https://github.com/tembo-io/tembo-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.12", features = ["cargo", "wrap_help"] }
clap_complete = "4.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
serde_yaml = "0.9.17"
home = "0.5.5"
spinners = "4.1.0"
semver = "1.0.18"
mockall = "0.11.4"
toml = "0.7.6"
chrono = { version = "0.4.29", features = ["serde"] }
log = "0.4.20"
simplelog = { version = "^0.12.1", features = ["paris"] }
clerk-rs = "0.1.7"
jsonwebtoken = "8.3.0"
log = "0.4.20"
reqwest = { version = "^0.11", default-features = false, features = [
  "cookies",
  "default-tls",
  "blocking",
] }
hyper = "0.14.27"
rpassword = "7.2.0"
jwt = "0.16.0"
dateparser = "0.2.0"

[dev-dependencies]
assert_cmd = "2.0.8"
predicates = "2.1.5"
