[package]
name = "conductor"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.55.1"
aws-sdk-cloudformation = "0.26.0"
base64 = "0.22"
chrono = { version = "0.4.24", features = ["serde"] }
controller = { path = "../tembo-operator", package = "controller" }
env_logger = "0.11"
futures = "0.3.28"
k8s-openapi = { version = "0.24.0", features = ["v1_30", "schemars"] }
log = "0.4.17"
pgmq = "=0.29.2"
schemars = "0.8.12"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.28.0", features = ["full"] }
actix-web = "4.10"
actix-web-opentelemetry = { version = "0.21.0", features = [
  "metrics-prometheus",
] }
opentelemetry = { version = "0.27", features = ["metrics", "trace"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-prometheus = "0.27"
prometheus = "0.13"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres"] }
anyhow = "1.0.82"
serde_yaml = "0.9.34"
reqwest = { version = "=0.12.12", features = ["json"] }
google-cloud-storage = "0.24"
azure_identity = "0.21"
azure_mgmt_msi = "0.21"
azure_mgmt_authorization = "0.21"
azure_mgmt_storage = "0.21"
azure_core = "0.21"
uuid = "1.10.0"
url = "=2.5.2" #https://github.com/servo/rust-url/issues/992
idna = "=0.5.0" #https://github.com/servo/rust-url/issues/992

[dependencies.kube]
features = ["runtime", "client", "derive"]
version = "0.98.0"


[dev-dependencies]
rand = "0.9"
