[package]
name = "coredb-cli"
version = "0.1.0"
edition = "2021"
authors = ["CoreDB.io"]
description = "The CLI for CoreDB"
homepage = "https://www.coredb.io"
license = "MIT"
readme = "README.md"
repository = "https://github.com/CoreDB-io/coredb/tree/main/coredb-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
serde_json = "1.0.91"
serde_yaml = "0.9.17"

[dev-dependencies]
assert_cmd = "2.0.8"
predicates = "2.1.5"
