[package]
name = "controller"
version = "0.12.4"
authors = ["clux <sszynrae@gmail.com>"]
edition = "2021"
default-run = "controller"
license = "Apache-2.0"
publish = false

[[bin]]
doc = false
name = "controller"
path = "src/main.rs"

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"

[lib]
name = "controller"
path = "src/lib.rs"

[features]
default = []
telemetry = ["tonic", "opentelemetry-otlp"]

[dependencies]
actix-web = "4.2.1"
futures = "0.3.25"
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }
k8s-openapi = { version = "0.16.0", features = ["v1_24"], default-features = false }
schemars = { version = "0.8.11", features = ["chrono"] }
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
serde_yaml = "0.9.14"
prometheus = "0.13.3"
chrono = { version = "0.4.23", features = ["serde"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.18.0"
opentelemetry = { version = "0.18.0", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.11.0", features = ["tokio"], optional = true }
tonic = { version = "0.8.3", optional = true }
thiserror = "1.0.37"

[dev-dependencies]
assert-json-diff = "2.0.2"
http = "0.2.8"
hyper = "0.14.23"
tower-test = "0.4.0"

[dependencies.kube]
features = ["runtime", "client", "derive"]
version = "0.76.0"

# testing new releases - ignore
#git = "https://github.com/kube-rs/kube-rs.git"
#rev = "8dcd5c0865ad0a40520519032119fbe4ea5f85f7"
#path = "../kube/kube"
