[package]
name = "dataplane_webserver"
description = "Backend for the CoreDB Data Plane"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.0"
chrono = "0.4.24"
env_logger = "0.10.0"
base64 = "0.22.0"
log = "0.4.17"
futures = "0.3.28"
serde = "1.0.152"
serde_json = "1.0.93"
thiserror = "1.0.38"
tokio = { version = "1.23.0", features = ["full"] }
sqlx = "0.8.0"
utoipa = { version = "3", features = ["actix_extras", "chrono", "indexmap"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["actix-web"]}
utoipa-redoc = { version = "0.1.0", features = ["actix-web"] }
mockall = "0.13.0"
promql-parser = "0.1.1"
reqwest = { version = "0.11.18", features = ["json"]}
lazy_static = "1.4.0"
kube = { version = "0.90.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.21.0", features = ["v1_25"] }
indexmap = "2.0.0"
regex = "1.9.6"
actix-http = "3.9.0"
jsonwebtoken = "8.3.0"

[dev-dependencies]
tracing = "0.1.40"
tracing-test = "0.2.5"
