[package]
name = "dataplane_webserver"
description = "Backend for the CoreDB Data Plane"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
actix-cors = "0.7"
actix-web = "4.9"
chrono = "0.4.24"
env_logger = "0.11"
base64 = "0.22"
log = "0.4"
futures = "0.3"
serde = "1"
serde_json = "1"
thiserror = "1.0.38"
tokio = { version = "1.44", features = ["full"] }
utoipa = { version = "3", features = ["actix_extras", "chrono", "indexmap"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["actix-web"] }
utoipa-redoc = { version = "0.1.0", features = ["actix-web"] }
promql-parser = "0.1.1"
reqwest = { version = "0.12", features = ["json"] }
lazy_static = "1.5"
kube = { version = "0.98.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24.0", features = ["v1_30"] }
indexmap = "2"
regex = "1"
jsonwebtoken = "8.3.0"
