[package]
name = "coredb"
version = "2023.2.15"
edition = "2021"
authors = ["CoreDB.io"]
description = "CoreDB distribution of postgres"
homepage = "https://www.coredb.io"
license = "MIT"
readme = "README.md"
repository = "https://github.com/CoreDB-io/coredb/tree/main/postgres"
publish = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
