workspace = { members = ["temboclient", "tembodataclient"] }
[package]
name = "tembo-cli"
version = "0.20.6"
edition = "2021"
authors = ["Tembo.io"]
description = "The CLI for Tembo"
homepage = "https://www.tembo.io"
license = "MIT"
readme = "README.md"
repository = "https://github.com/tembo-io/tembo-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tembo"
path = "src/main.rs"

[lib]
name = "tembo"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.71"
actix-web = "4.5.1"
actix-service = "2.0.2"
webbrowser = "0.8.12"
clap = { version = "4.3.12", features = ["cargo", "wrap_help", "derive"] }
futures = "0.3.30"
actix-cors = "0.7.0"
clap_complete = "4.3.2"
serde = { version = "1.0", features = ["derive"] }
prettytable-rs = "0.10.0"
serde_json = "1.0.91"
crossterm = "0.27.0"
serde_yaml = "0.9.17"
home = "0.5.5"
semver = "1.0.18"
mockall = "0.11.4"
toml = "0.8.19"
chrono = { version = "0.4.29", features = ["serde"] }
simplelog = { version = "^0.12.1", features = ["paris"] }
clerk-rs = "0.1.7"
jsonwebtoken = "8.3.0"
reqwest = { version = "^0.11", default-features = false, features = [
  "cookies",
  "default-tls",
  "blocking",
] }
hyper = "0.14.27"
rpassword = "7.2.0"
jwt = "0.16.0"
dateparser = "0.2.0"
log = "0.4.20"
tera = "1.18.1"
curl = "0.4.44"
temboclient = { version = "1.0.2", path = "temboclient" }
tembodataclient = { version = "0.0.2", path = "tembodataclient" }
tokio = { version = "1.26.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "sync",
] }
tungstenite ="0.21.0"
futures-util = "0.3.30"
dirs = "5.0.1"
controller = "0.47.0"
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "postgres", "chrono", "json"] }
base64 = "0.21.5"
colorful = "0.2.2"
cli-table = "0.4.7"
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
tiny-gradient = "0.1.0"
urlencoding = "2.1.3"
spinoff = "0.8.0"
k8s-openapi = { version = "0.18.0", features = ["v1_25", "schemars"], default-features = false }
tembo-stacks = "0.7.0"
itertools = "0.12.1"
random-string = "1.1.0"
test-case = "=2.0.0-rc2"
clap-markdown = { git = "https://github.com/tembo-io/clap-markdown.git", branch = "main", version = "0.1.3" }
url = "2.5.0"
rand = "0.8.5"
sqlx-cli = "0.7.3"

[target.aarch64-unknown-linux-musl.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.aarch64-apple-darwin.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.x86_64-apple-darwin.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.x86_64-pc-windows-msvc.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
assert_cmd = "2.0.8"
predicates = "2.1.5"
rstest = "0.18"

# We can't run integration tests in parallel currently since there are
# conflicts in containers (like traefik) provisioned by various tests
[env]
RUST_TEST_THREADS = "1"