[package]
name = "controller"
description = "Tembo Operator for Postgres"
version = "0.52.0"
edition = "2021"
default-run = "controller"
license = "Apache-2.0"
publish = true

[[bin]]
doc = false
name = "controller"
path = "src/main.rs"

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"

[lib]
name = "controller"
path = "src/lib.rs"

[features]
default = []
telemetry = ["opentelemetry-otlp"]

[dependencies]
actix-web = "4.4"
futures = "0.3"
tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] }
k8s-openapi = { version = "0.23", features = [
  "v1_29",
  "schemars",
], default-features = false }
schemars = { version = "0.8", features = ["chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.25"
prometheus = "0.13.4"
chrono = { version = "0.4.38", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.27"
opentelemetry = { version = "0.26", features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.26", optional = true }
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio"] }
thiserror = "1.0"
passwords = "3.1"
regex = "1"
lazy_static = "1.4.0"
itertools = "0.13"
base64 = "0.22"
semver = "1.0"
anyhow = "1.0"
rand = "0.8.5"
reqwest = { version = "0.12", features = ["json", "trust-dns"] }
utoipa = "3.5.0"
strum = { version = "0.26.2", features = ["derive"] }
prometheus-client = "0.22"

[dev-dependencies]
assert-json-diff = "2.0.2"
http = "1"
hyper = "1"
rand = "0.8.5"
tower-test = "0.4.0"
futures-util = "0.3"
regex = "1"
bytes = "1"

[dependencies.kube]
features = ["runtime", "client", "derive", "ws"]
version = "0.96"
