[package]
name = "controller"
description = "Tembo Operator for Postgres"
version = "0.59.0"
edition = "2021"
default-run = "controller"
license = "Apache-2.0"
publish = true

[[bin]]
doc = false
name = "controller"
path = "src/main.rs"

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"

[lib]
name = "controller"
path = "src/lib.rs"

[features]
default = []
telemetry = ["tonic", "opentelemetry-otlp"]

[dependencies]
actix-web = "4.10"
futures = "0.3"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread"] }
k8s-openapi = { version = "0.24.0", features = [
  "v1_30",
  "schemars",
], default-features = false }
schemars = { version = "0.8", features = ["chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.28"
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tokio"], optional = true }
prometheus-client = "0.23"
tonic = { version = "0.12", optional = true } # 0.9 blocked on opentelemetry-otlp release
thiserror = "2.0"
passwords = "3.1.13"
regex = "1.9.1"
lazy_static = "1.4.0"
itertools = "0.14.0"
base64 = "0.22.1"
semver = "1.0.18"
anyhow = "1.0.72"
rand = "0.9"
reqwest = { version = "0.12", features = ["json", "trust-dns"] }
utoipa = "3.5.0"

[dev-dependencies]
assert-json-diff = "2.0.2"
http = "1"
hyper = "1"
rand = "0.9"
tower-test = "0.4.0"
futures-util = "0.3"
regex = "1"
serial_test = "3"
http-body-util = "0.1"
bytes = "1"

[dependencies.kube]
features = ["runtime", "client", "derive", "ws"]
version = "0.99.0"
