[package]
name = "tembo-pod-init"
version = "0.1.0"
edition = "2021"

[[bin]]
doc = false
name = "tembo-pod-init"
path = "src/main.rs"

[dependencies]
actix-web = { version = "4.3", features = ["openssl"] }
tokio = { version = "1.29", features = ["rt"] }
serde = { version = "1.0", features = ["derive"]}
k8s-openapi = { version = "0.18.0", features = ["v1_25", "schemars"], default-features = false }
serde_json = "1.0"
json-patch = "1"
parking_lot = "0.12"
futures = "0.3"
openssl = { version = "0.10", features = ["vendored"] }
controller = {path = "../tembo-operator", package = "controller"}
tracing = "0.1"
tembo-telemetry = "0.2.0"
opentelemetry = { version = "0.19.0", features = ["trace", "metrics"] }

[dependencies.kube]
features = ["admission","runtime", "client", "derive", "ws"]
version = "0.84.0"
