[package]
name = "tembo-pod-init"
version = "0.2.1"
edition = "2021"
publish = false

[[bin]]
doc = false
name = "tembo-pod-init"
path = "src/main.rs"

[dependencies]
actix-web = { version = "4.10", features = ["openssl"] }
tokio = { version = "1.43", features = ["rt"] }
once_cell = "1"
serde = { version = "1.0", features = ["derive"] }
k8s-openapi = { version = "0.24.0", features = [
  "v1_30",
  "schemars",
], default-features = false }
serde_json = "1.0"
json-patch = "4" # Version 3 is required for kube-rs compatibility
parking_lot = "0.12"
futures = "0.3"
openssl = { version = "0.10", features = ["vendored"] }
controller = { path = "../tembo-operator", package = "controller" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.28"
opentelemetry = { version = "0.27", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["trace", "grpc-tonic"] }
opentelemetry-prometheus = "0.27"
opentelemetry-semantic-conventions = "0.27"
prometheus = "0.13"
rustc_version_runtime = "0.3"
tracing-actix-web = "0.7"
uuid = { version = "1", features = ["v4"] }
regex = "1.11.1"

[dependencies.kube]
features = ["admission", "runtime", "client", "derive", "ws"]
version = "0.99.0"
