[package]
name = "tembo-stacks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
futures = "0.3.28"
lazy_static = "1.4.0"
schemars = {version = "0.8.12", features = ["chrono"]}
k8s-openapi = { version = "0.18.0", features = ["v1_25", "schemars"], default-features = false } # This version has to be in line with the same version we use in the controller
serde = "1.0.152"
serde_yaml = "0.9.21"
tembo-controller = { package = "controller", version = "0.33.0" }
tracing = "0.1"
utoipa = { version = "3", features = ["actix_extras", "chrono"] }
