[project]
name = "image-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "notebook>=7.2.2",
    "requests>=2.32.3",
    "transformers>=4.44.2",
    "pandas>=2.2.2",
    "accelerate>=0.34.2",
    "torch>=2.4.1",
    "psycopg>=3.2.2",
    "pydantic>=2.9.1",
    "psycopg-binary>=3.2.2",
    "pillow>=10.4.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.5",
]
