[package]
name = "pgx-pgmq"
version = "0.0.1-alpha"
edition = "2021"
authors = ["CoreDB.io"]
description = "Postgres extension for PGMQ"
homepage = "https://www.coredb.io"
license = "MIT"
readme = "README.md"
repository = "https://github.com/CoreDB-io/coredb"


[lib]
crate-type = ["cdylib"]

[features]
default = ["pg14"]
pg11 = ["pgx/pg11", "pgx-tests/pg11"]
pg12 = ["pgx/pg12", "pgx-tests/pg12"]
pg13 = ["pgx/pg13", "pgx-tests/pg13"]
pg14 = ["pgx/pg14", "pgx-tests/pg14"]
pg15 = ["pgx/pg15", "pgx-tests/pg15"]
pg_test = []

[dependencies]
pgx = "0.7.1"
serde = "1.0.152"
pgmq = { path = "../../crates/pgmq", version = "0.3.0" }
serde_json = "1.0.91"

[dev-dependencies]
pgx-tests = "0.7.1"

[profile.dev]
panic = "unwind"
lto = "thin"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1

[build-dependencies]
bindgen = "0.63.0"
