[package]
name = "pgx_prometheus_exporter"
version = "0.0.1-alpha"
edition = "2021"
authors = ["CoreDB.io"]
description = "Rust extension for exporting prometheus metrics"
homepage = "https://www.coredb.io"
license = "MIT"
readme = "README.md"
repository = "https://github.com/CoreDB-io/coredb"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg14"]
pg11 = ["pgrx/pg11", "pgrx-tests/pg11" ]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12" ]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg_test = []

[dependencies]
pgrx = "0.8.4"
actix-web = "4.2.1"
prometheus-client = "0.19.0-alpha.2"
signal-hook = "0.3.14"
tokio = {version = "1.23.0", features = ["macros"] }


[dev-dependencies]
pgrx-tests = "0.8.4"

[profile.dev]
panic = "unwind"
lto = "thin"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
